[dependencies]
chrono = "0.3"
hyper = "0.10"
hyper-rustls = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[package]
authors = [
  "Adam Spofford <pieflavor.mc@gmail.com>",
  "Hunar Roop Kahlon <hunar.roop@gmail.com>"
]
description = "A library abstracting over the SpongePowered Ore web API."
homepage = "https://www.github.com/pxlpowered/ore"
license = "MIT"
name = "ore"
readme = "README.md"
repository = "https://www.github.com/pxlpowered/ore"
version = "0.1.0"
